src/test/resources/wacc_examples/invalid/syntaxErr/classes/initializeInClass.wacc
# variables should not be initialized in classes

# Output:
# #empty#

# Program:

begin
  class c {
    int t = 5
  }
end
